adding properties details
